--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ChatGPT</title>
 </head>
 <body>
-    Rachel Ehek
-    <p>Hai Panda Lucu Yang Seperti Teman Bohongan Yang Seharusnya Tidak TERLAHIRKAN</p>
+    <p>ChatGPT adalah sebuah bot obrolan kecerdasan buatan berupa model bahasa generatif yang menggunakan teknologi transformer untuk memprediksi probabilitas kalimat atau kata berikutnya dalam suatu percakapan ataupun perintah teks.</p>
+    <div>dari rachel</div>
 </body>
 </html>
