--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>ChatGPT adalah sebuah bot obrolan kecerdasan buatan berupa model bahasa generatif yang menggunakan teknologi transformer untuk memprediksi probabilitas kalimat atau kata berikutnya dalam suatu percakapan ataupun perintah teks.</p>
-    <div>dari rachel</div>
+    <div>dari rachel Aurora Azzahra ( XI IPS 3 )</div>
 </body>
 </html>
